# spider-cli

./: .gitignore  CONFIG_GUIDE.md  Cargo.toml  README.md  run_test_build.sh  start_dashboard.sh  verify_dashboard.sh
assets/: hierarchy.css  hierarchy_indented.css  hierarchy_treemap.css  styles.css
configs/: base.toml  derived.toml  hacker_news.json  hacker_news.toml  hacker_news.yaml  pagination_test.json  quotes.json  quotes.yaml  sqlite_test.json  test_advanced.json
src/: main.rs
src/config/: loader.rs  schema.rs
src/crawler/: mod.rs
src/features/: cache.rs  mod.rs  proxy.rs
src/models/: mod.rs
src/state/: mod.rs
src/ui/: mod.rs
src/url_parser/: mod.rs
templates/: base.html  help.html  hierarchy.html  index.html  stats.html
