[package]
name = "spider-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Crawler
spider = { version = "2.0", features = ["ua_generator", "cache"] }
chadselect = "0.2"

# Backend & Web
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
askama = "0.15.4"
askama_axum = "0.4.0"

# Persistence (Durable State)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
validator = { version = "0.19", features = ["derive"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4.4", features = ["derive"] }

# Networking & Utilities
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
futures = "0.3"
tokio-stream = "0.1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
